--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "dice-predictor",
-  "version": "1.0.0",
-  "description": "Dice prediction system for Sunwin and LC79",
+  "name": "dice-predictor-pro",
+  "version": "2.0.0",
+  "description": "Advanced dice prediction system with multiple algorithms",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "generate-patterns": "node generate_patterns.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.0",
-    "node-cron": "^3.0.3",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
