--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "dice-predictor-pro",
-  "version": "2.0.0",
-  "description": "Advanced dice prediction system with multiple algorithms",
+  "name": "dice-predictor-ultimate",
+  "version": "3.0.0",
+  "description": "Ultimate dice prediction system with advanced algorithms",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "generate-patterns": "node generate_patterns.js"
+    "generate-patterns": "node generate_patterns.js",
+    "test": "node test_predictions.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "axios": "^1.6.0",
-    "cors": "^2.8.5",
-    "node-cron": "^3.0.3"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
