--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "dice-predictor-ultimate",
-  "version": "3.0.0",
-  "description": "Ultimate dice prediction system with advanced algorithms",
+  "name": "dice-predictor-ultimate-pro",
+  "version": "4.0.0",
+  "description": "Ultimate dice prediction with 8 independent algorithms",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "generate-patterns": "node generate_patterns.js",
-    "test": "node test_predictions.js"
+    "test": "node test.js"
   },
   "dependencies": {
     "express": "^4.18.2",
