--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "dice-predictor-ultimate-pro",
-  "version": "4.0.0",
-  "description": "Ultimate dice prediction with 8 independent algorithms",
+  "name": "tai-xiu-predictor",
+  "version": "1.0.0",
+  "description": "API dự đoán Tài Xỉu sử dụng multiple algorithms",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "node test.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,5 +14,11 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "keywords": ["tai-xiu", "prediction", "api", "algorithm"],
+  "author": "Tài Xỉu Predictor",
+  "license": "MIT"
 }
