--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tai-xiu-predictor",
+  "name": "taixiu-predictor",
   "version": "1.0.0",
-  "description": "API dự đoán Tài Xỉu sử dụng multiple algorithms",
+  "description": "API dự đoán Tài Xỉu từ nhiều nguồn dữ liệu",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -9,16 +9,12 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.0",
-    "cors": "^2.8.5"
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=16.0.0"
-  },
-  "keywords": ["tai-xiu", "prediction", "api", "algorithm"],
-  "author": "Tài Xỉu Predictor",
-  "license": "MIT"
+  }
 }
