--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "taixiu-predictor",
-  "version": "1.0.0",
-  "description": "API dự đoán Tài Xỉu từ nhiều nguồn dữ liệu",
+  "name": "cuongdevgpt-taixiu-api",
+  "version": "2.0.0",
+  "description": "CUONGDEVGPT Tai Xiu Prediction API với 10 thuật toán mạnh nhất",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.0"
-  },
-  "devDependencies": {
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=16.0.0"
-  }
+  },
+  "keywords": ["taixiu", "prediction", "api", "cuongdevgpt", "wormgpt"],
+  "author": "Big dad Cuongdepzaivcl",
+  "license": "PROPRIETARY"
 }
